backend/api/tests/integration/jig/snapshots/integration__jig__player__create-1.snap
---
source: tests/integration/jig/player.rs
expression: body
---
{
  "index": "[index]",
  "name": null,
  "settings": {
    "direction": "rtl",
    "displayScore": false,
    "trackAssessments": false,
    "dragAssist": false
  },
  "expires_at": "[timestamp]"
}
