backend/api/tests/integration/jig/snapshots/integration__jig__player__create-2.snap
---
source: tests/integration/jig/player.rs
expression: body
---
{
  "sessions": [
    {
      "index": "[index]",
      "name": null,
      "settings": {
        "direction": "ltr",
        "displayScore": true,
        "trackAssessments": true,
        "dragAssist": true
      },
      "expires_at": "[timestamp]"
    },
    {
      "index": "[index]",
      "name": null,
      "settings": {
        "direction": "rtl",
        "displayScore": false,
        "trackAssessments": false,
        "dragAssist": false
      },
      "expires_at": "[timestamp]"
    },
    {
      "index": "[index]",
      "name": null,
      "settings": {
        "direction": "rtl",
        "displayScore": false,
        "trackAssessments": false,
        "dragAssist": false
      },
      "expires_at": "[timestamp]"
    }
  ]
}
