backend/api/tests/integration/jig/snapshots/integration__jig__player__create.snap
---
source: tests/integration/jig/player.rs
expression: body

---
{
  "index": 1237,
  "settings": {
    "direction": "rtl",
    "displayScore": false,
    "trackAssessments": false,
    "dragAssist": false
  }
}
