backend/api/tests/integration/jig/snapshots/integration__jig__player__list-1.snap
---
source: tests/integration/jig/player.rs
expression: body
---
{
  "sessions": [
    {
      "index": 1234,
      "name": null,
      "settings": {
        "direction": "ltr",
        "displayScore": true,
        "trackAssessments": true,
        "dragAssist": true
      },
      "expires_at": "[timestamp]"
    },
    {
      "index": 1235,
      "name": null,
      "settings": {
        "direction": "ltr",
        "displayScore": true,
        "trackAssessments": true,
        "dragAssist": true
      },
      "expires_at": "[timestamp]"
    }
  ]
}
