backend/api/tests/integration/jig/snapshots/integration__jig__player__session_instance_play_count_flow.snap
---
source: tests/integration/jig/player.rs
expression: body

---
{
  "jigId": "0cc084bc-7c83-11eb-9f77-e3218dffb008",
  "settings": {
    "direction": "ltr",
    "displayScore": true,
    "trackAssessments": true,
    "dragAssist": true
  },
  "token": "[instance_token]"
}
